--- a/nginx.conf
+++ b/nginx.conf
@@ -1,5 +1,11 @@
 # 本文件用于docker-compose的nginx配置
 
+events {
+    worker_connections 1024;
+    multi_accept on;
+    use epoll;
+}
+
 http {
     server {
         listen 80;
