test vercel deploy

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "Darmau",
   "private": true,
   "license": "MIT",
+  "type": "commonjs",
   "scripts": {
     "build": "nest build",
     "dev": "pnpm run start:dev",
