--- a/package.json
+++ b/package.json
@@ -22,36 +22,38 @@
   },
   "dependencies": {
     "@extractus/article-extractor": "^7.2.16",
-    "@extractus/feed-extractor": "^6.2.2",
-    "@nestjs/common": "^9.4.2",
-    "@nestjs/config": "^2.3.2",
-    "@nestjs/core": "^9.4.2",
-    "@nestjs/jwt": "^10.0.3",
-    "@nestjs/mongoose": "^9.2.2",
-    "@nestjs/platform-express": "^9.4.2",
-    "@nestjs/schedule": "^2.2.2",
+    "@extractus/feed-extractor": "^6.2.3",
+    "@nestjs/common": "^10.0.3",
+    "@nestjs/config": "^3.0.0",
+    "@nestjs/core": "^10.0.3",
+    "@nestjs/jwt": "^10.1.0",
+    "@nestjs/mongoose": "^10.0.0",
+    "@nestjs/platform-express": "^10.0.3",
+    "@nestjs/schedule": "^3.0.1",
     "bcrypt": "^5.1.0",
     "cheerio": "1.0.0-rc.12",
     "class-validator": "^0.14.0",
     "cos-nodejs-sdk-v5": "^2.12.1",
-    "dotenv": "^16.1.3",
-    "mongoose": "^7.2.2",
+    "dotenv": "^16.3.1",
+    "mongoose": "^7.3.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
     "sharp": "^0.32.1"
   },
   "devDependencies": {
-    "@nestjs/cli": "^9.5.0",
-    "@nestjs/schematics": "^9.2.0",
-    "@nestjs/testing": "^9.4.2",
+    "@nestjs/cli": "^10.0.5",
+    "@nestjs/schematics": "^10.0.1",
+    "@nestjs/testing": "^10.0.3",
+    "@swc/cli": "^0.1.62",
+    "@swc/core": "^1.3.66",
     "@types/cron": "^2.0.1",
     "@types/express": "^4.17.17",
     "@types/jest": "29.5.2",
-    "@types/node": "20.2.5",
+    "@types/node": "20.3.2",
     "@types/supertest": "^2.0.12",
-    "@typescript-eslint/eslint-plugin": "^5.59.8",
-    "@typescript-eslint/parser": "^5.59.8",
-    "eslint": "^8.41.0",
+    "@typescript-eslint/eslint-plugin": "^5.60.1",
+    "@typescript-eslint/parser": "^5.60.1",
+    "eslint": "^8.43.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
     "jest": "29.5.0",
@@ -64,7 +66,7 @@
     "ts-node": "^10.9.1",
     "tsconfig-paths": "4.2.0",
     "typescript": "^5.1.3",
-    "webpack": "^5.85.0",
+    "webpack": "^5.88.0",
     "webpack-node-externals": "^3.0.0"
   },
   "jest": {
