--- a/package.json
+++ b/package.json
@@ -33,12 +33,10 @@
     "bcrypt": "^5.1.0",
     "cheerio": "1.0.0-rc.12",
     "class-validator": "^0.14.0",
-    "cos-nodejs-sdk-v5": "^2.12.1",
     "dotenv": "^16.3.1",
     "mongoose": "^7.3.1",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.1",
-    "sharp": "^0.32.1"
+    "rxjs": "^7.8.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.5",
