--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "dev": "pnpm run start:dev",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
-    "start:dev": "nest build --webpack --webpackPath webpack-hmr.config.js --watch",
+    "start:dev": "nest build --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
@@ -21,49 +21,48 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@extractus/article-extractor": "^7.2.16",
-    "@extractus/feed-extractor": "^6.2.3",
-    "@nestjs/common": "^10.0.3",
+    "@extractus/article-extractor": "7.2.18",
+    "@extractus/feed-extractor": "6.2.4",
+    "@nestjs/common": "^10.1.0",
     "@nestjs/config": "^3.0.0",
-    "@nestjs/core": "^10.0.3",
+    "@nestjs/core": "^10.1.0",
     "@nestjs/jwt": "^10.1.0",
-    "@nestjs/mongoose": "^10.0.0",
-    "@nestjs/platform-express": "^10.0.3",
+    "@nestjs/mongoose": "^10.0.1",
+    "@nestjs/platform-express": "^10.1.0",
     "@nestjs/schedule": "^3.0.1",
     "bcrypt": "^5.1.0",
     "cheerio": "1.0.0-rc.12",
     "class-validator": "^0.14.0",
     "dotenv": "^16.3.1",
-    "mongoose": "^7.3.1",
+    "mongoose": "^7.4.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
   },
   "devDependencies": {
-    "@nestjs/cli": "^10.0.5",
+    "@nestjs/cli": "^10.1.10",
     "@nestjs/schematics": "^10.0.1",
-    "@nestjs/testing": "^10.0.3",
+    "@nestjs/testing": "^10.1.0",
+    "@swc/cli": "^0.1.62",
+    "@swc/core": "^1.3.70",
     "@types/cron": "^2.0.1",
     "@types/express": "^4.17.17",
-    "@types/jest": "29.5.2",
-    "@types/node": "20.3.2",
+    "@types/jest": "29.5.3",
+    "@types/node": "20.4.4",
     "@types/supertest": "^2.0.12",
-    "@typescript-eslint/eslint-plugin": "^5.60.1",
-    "@typescript-eslint/parser": "^5.60.1",
-    "eslint": "^8.43.0",
+    "@typescript-eslint/eslint-plugin": "^6.1.0",
+    "@typescript-eslint/parser": "^6.1.0",
+    "eslint": "^8.45.0",
     "eslint-config-prettier": "^8.8.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "jest": "29.5.0",
-    "prettier": "^2.8.8",
-    "run-script-webpack-plugin": "^0.2.0",
+    "eslint-plugin-prettier": "^5.0.0",
+    "jest": "29.6.1",
+    "prettier": "^3.0.0",
     "source-map-support": "^0.5.21",
     "supertest": "^6.3.3",
-    "ts-jest": "29.1.0",
+    "ts-jest": "29.1.1",
     "ts-loader": "^9.4.4",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "4.2.0",
-    "typescript": "^5.1.6",
-    "webpack": "^5.88.1",
-    "webpack-node-externals": "^3.0.0"
+    "typescript": "^5.1.6"
   },
   "jest": {
     "moduleFileExtensions": [
