--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "MIT",
   "scripts": {
     "build": "nest build",
-    "dev": "pnpm run start:dev",
+    "dev": "nest start --watch",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest build --watch",
@@ -21,41 +21,41 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@extractus/article-extractor": "7.2.18",
+    "@extractus/article-extractor": "7.3.1",
     "@extractus/feed-extractor": "6.2.4",
-    "@nestjs/common": "^10.1.0",
+    "@nestjs/common": "^10.1.3",
     "@nestjs/config": "^3.0.0",
-    "@nestjs/core": "^10.1.0",
+    "@nestjs/core": "^10.1.3",
     "@nestjs/jwt": "^10.1.0",
     "@nestjs/mongoose": "^10.0.1",
-    "@nestjs/platform-express": "^10.1.0",
-    "@nestjs/schedule": "^3.0.1",
+    "@nestjs/platform-express": "^10.1.3",
+    "@nestjs/schedule": "^3.0.2",
     "bcrypt": "^5.1.0",
     "cheerio": "1.0.0-rc.12",
     "class-validator": "^0.14.0",
     "dotenv": "^16.3.1",
-    "mongoose": "^7.4.0",
+    "mongoose": "^7.4.2",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
   },
   "devDependencies": {
-    "@nestjs/cli": "^10.1.10",
-    "@nestjs/schematics": "^10.0.1",
-    "@nestjs/testing": "^10.1.0",
+    "@nestjs/cli": "^10.1.11",
+    "@nestjs/schematics": "^10.0.2",
+    "@nestjs/testing": "^10.1.3",
     "@swc/cli": "^0.1.62",
-    "@swc/core": "^1.3.70",
-    "@types/cron": "^2.0.1",
+    "@swc/core": "^1.3.76",
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.17",
     "@types/jest": "29.5.3",
-    "@types/node": "20.4.4",
+    "@types/node": "20.4.9",
     "@types/supertest": "^2.0.12",
-    "@typescript-eslint/eslint-plugin": "^6.1.0",
-    "@typescript-eslint/parser": "^6.1.0",
-    "eslint": "^8.45.0",
-    "eslint-config-prettier": "^8.8.0",
+    "@typescript-eslint/eslint-plugin": "^6.3.0",
+    "@typescript-eslint/parser": "^6.3.0",
+    "eslint": "^8.46.0",
+    "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
-    "jest": "29.6.1",
-    "prettier": "^3.0.0",
+    "jest": "29.6.2",
+    "prettier": "^3.0.1",
     "source-map-support": "^0.5.21",
     "supertest": "^6.3.3",
     "ts-jest": "29.1.1",
