--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@nestjs/cache-manager": "^2.2.0",
     "@nestjs/common": "^10.3.0",
     "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.3.0",
@@ -29,6 +30,7 @@
     "@nestjs/platform-express": "^10.3.0",
     "@nestjs/schedule": "^4.0.0",
     "bcrypt": "^5.1.1",
+    "cache-manager": "^5.3.2",
     "cheerio": "1.0.0-rc.12",
     "class-validator": "^0.14.1",
     "dotenv": "^16.3.1",
