--- a/package.json
+++ b/package.json
@@ -21,48 +21,48 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@extractus/article-extractor": "7.3.1",
-    "@extractus/feed-extractor": "6.2.4",
-    "@nestjs/common": "^10.1.3",
-    "@nestjs/config": "^3.0.0",
-    "@nestjs/core": "^10.1.3",
-    "@nestjs/jwt": "^10.1.0",
-    "@nestjs/mongoose": "^10.0.1",
-    "@nestjs/platform-express": "^10.1.3",
-    "@nestjs/schedule": "^3.0.2",
+    "@nestjs/cache-manager": "^2.2.0",
+    "@nestjs/common": "^10.3.0",
+    "@nestjs/config": "^3.1.1",
+    "@nestjs/core": "^10.3.0",
+    "@nestjs/jwt": "^10.2.0",
+    "@nestjs/mongoose": "^10.0.2",
+    "@nestjs/platform-express": "^10.3.0",
+    "@nestjs/schedule": "^4.0.0",
     "bcrypt": "^5.1.1",
+    "cache-manager": "^5.3.2",
     "cheerio": "1.0.0-rc.12",
-    "class-validator": "^0.14.0",
+    "class-validator": "^0.14.1",
     "dotenv": "^16.3.1",
-    "mongoose": "^7.4.3",
-    "reflect-metadata": "^0.1.13",
+    "mongoose": "^8.0.4",
+    "reflect-metadata": "^0.2.1",
     "rxjs": "^7.8.1"
   },
   "devDependencies": {
-    "@nestjs/cli": "^10.1.12",
-    "@nestjs/schematics": "^10.0.2",
-    "@nestjs/testing": "^10.1.3",
-    "@swc/cli": "^0.1.62",
-    "@swc/core": "^1.3.78",
-    "@types/bcrypt": "^5.0.0",
-    "@types/express": "^4.17.17",
-    "@types/jest": "29.5.3",
-    "@types/node": "20.5.1",
-    "@types/supertest": "^2.0.12",
-    "@typescript-eslint/eslint-plugin": "^6.4.0",
-    "@typescript-eslint/parser": "^6.4.0",
-    "eslint": "^8.47.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-prettier": "^5.0.0",
-    "jest": "29.6.2",
-    "prettier": "^3.0.2",
+    "@nestjs/cli": "^10.3.0",
+    "@nestjs/schematics": "^10.1.0",
+    "@nestjs/testing": "^10.3.0",
+    "@swc/cli": "^0.1.63",
+    "@swc/core": "^1.3.102",
+    "@types/bcrypt": "^5.0.2",
+    "@types/express": "^4.17.21",
+    "@types/jest": "29.5.11",
+    "@types/node": "20.11.0",
+    "@types/supertest": "^6.0.2",
+    "@typescript-eslint/eslint-plugin": "^6.18.1",
+    "@typescript-eslint/parser": "^6.18.1",
+    "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "jest": "29.7.0",
+    "prettier": "^3.2.1",
     "source-map-support": "^0.5.21",
     "supertest": "^6.3.3",
     "ts-jest": "29.1.1",
-    "ts-loader": "^9.4.4",
-    "ts-node": "^10.9.1",
+    "ts-loader": "^9.5.1",
+    "ts-node": "^10.9.2",
     "tsconfig-paths": "4.2.0",
-    "typescript": "^5.1.6"
+    "typescript": "^5.3.3"
   },
   "jest": {
     "moduleFileExtensions": [
